--- a/heart.html
+++ b/heart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <title>Document</title>
     <style>
         html,
@@ -54,11 +54,15 @@
             /* 字体 */
             font-family: "幼圆";
         }
+        div:where(.swal2-icon) {
+            user-select: none;
+        }
     </style>
 </head>
 
 <body>
-    <canvas id="pinkboard"></canvas>
+    
+    <canvas id="board"></canvas>
     <div class="title">Nguyễn Thị Như Ý</div>
     <script>
         var settings = {
@@ -243,7 +247,7 @@
                 onResize();
                 render();
             }, 10);
-        })(document.getElementById('pinkboard'));
+        })(document.getElementById('board'));
     </script>
 </body>
 </html>
