--- a/indext.html
+++ b/indext.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html> 
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="Keywords" content="爱心代码，程序员表白">
+    <meta name="Description" content="爱心代码，HTML文件，程序员何未来GitHub爱心代码项目">
     <title>Document</title>
     <style>
         html,
